[gd_scene load_steps=6 format=3 uid="uid://dx75714lvb50l"]

[ext_resource type="Script" path="res://scripts/particle.gd" id="1_0xsog"]
[ext_resource type="Texture2D" uid="uid://drg6g52vq2nqw" path="res://assets/collectatable.png" id="1_vdjjc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ygl4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0bvom"]
load_path = "res://.godot/imported/collectatable.png-b6456a3519978d5817064ace45e3365d.ctex"

[sub_resource type="Curve" id="Curve_tyeis"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="collectable" type="Area2D"]
collision_layer = 2
script = ExtResource("1_0xsog")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_vdjjc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.25, 1.25)
shape = SubResource("RectangleShape2D_0ygl4")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.15
one_shot = true
texture = SubResource("CompressedTexture2D_0bvom")
direction = Vector2(1, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 250.0
initial_velocity_max = 250.0
scale_amount_min = 0.05
scale_amount_max = 0.2
scale_amount_curve = SubResource("Curve_tyeis")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered_collectable"]
[connection signal="finished" from="CPUParticles2D" to="." method="_on_cpu_collectable_finished"]
