[gd_scene load_steps=4 format=3 uid="uid://385y11veuexf"]

[ext_resource type="Script" path="res://scripts/particle.gd" id="1_2rgv1"]
[ext_resource type="Texture2D" uid="uid://cbc6j4ko5thxv" path="res://assets/obstacles.png" id="1_ksg7g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8njmu"]

[node name="obstacle" type="Area2D"]
collision_layer = 2
script = ExtResource("1_2rgv1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ksg7g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.25, 1.25)
shape = SubResource("RectangleShape2D_8njmu")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered_obstacle"]
